feat: implement paged user listing and update mapping to UserDTO
- Added findPaged method in UserRepository using Panache pagination
- Updated UserService to map User entities to UserDTOs
- Adjusted pagination to start from page 1
- Replaced Collectors.toList() with stream().toList() for unmodifiable lists
- Addressed static access warning for PanacheEntityBase.listAll